force-app/main/default/objects/Gear_Order__c/Gear_Order__c.object-meta.xml
<CustomObject>
    <description>Orders for baby gear</description>
    <label>Gear Order</label>
    <nameField>
        <displayFormat>GO-{000000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gear Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>