force-app/main/default/objects/Gear_Order__c/fields/Bulk_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Demographics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bulk Demographics were entered for this gear order based on ethnicity percentages. This affects how email notifications are sent to the partner organization.</description>
    <inlineHelpText>Bulk Demographics were entered for this gear order based on ethnicity percentages.</inlineHelpText>
    <label>Bulk Demographics</label>
    <type>Checkbox</type>
</CustomField>