force-app/main/default/objects/Gear_Order__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <formula>Partner_Organization__r.RecordType.Name</formula>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>