force-app/main/default/objects/Gear_Order__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comments / special requests regarding this order.</description>
    <inlineHelpText>Comments / special requests regarding this order.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>