force-app/main/default/objects/Gear_Order__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Order Contact Mobile Phone Number</description>
    <formula>Order_Contact__r.MobilePhone</formula>
    <inlineHelpText>Order Contact Mobile Phone Number</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>