force-app/main/default/objects/Gear_Order__c/fields/Do_Not_Update_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&#39;t update product items in inventory</description>
    <inlineHelpText>Don&#39;t update product items in inventory</inlineHelpText>
    <label>Don&#39;t Update Inventory</label>
    <type>Checkbox</type>
</CustomField>