force-app/main/default/objects/Gear_Order__c/fields/Gear_Orders__c.field-meta.xml
<CustomField>
    <fullName>Gear_Orders__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Gear Orders</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>