force-app/main/default/objects/Gear_Order__c/fields/Items_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Items_Fulfilled__c</fullName>
    <description>Total number of items fulfilled in this order</description>
    <label># Items Fulfilled</label>
    <summarizedField>Gear_Order_Item__c.Quantity_Items_Fulfilled__c</summarizedField>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>