force-app/main/default/objects/Gear_Order__c/fields/Items_In_Order__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Order__c</fullName>
    <description>Total number of items in this order, taking into account products distributed in bundles.</description>
    <inlineHelpText>Total number of items in this order, taking into account products distributed in bundles.</inlineHelpText>
    <label># Items In Order</label>
    <summarizedField>Gear_Order_Item__c.Quantity_Items__c</summarizedField>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>