force-app/main/default/objects/Gear_Order__c/fields/Items_Short__c.field-meta.xml
<CustomField>
    <fullName>Items_Short__c</fullName>
    <description>Total number of items short for this order</description>
    <label># Items Short</label>
    <summarizedField>Gear_Order_Item__c.Quantity_Short__c</summarizedField>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>