force-app/main/default/objects/Gear_Order__c/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>