force-app/main/default/objects/Gear_Order__c/fields/Line_Items_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Fulfilled__c</fullName>
    <label>Line Items Fulfilled</label>
    <summaryFilterItems>
        <field>Gear_Order_Item__c.Fulfilled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>