force-app/main/default/objects/Gear_Order__c/fields/NoTimesWork__c.field-meta.xml
<CustomField>
    <fullName>NoTimesWork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The partner has indicated no preferred pick times.</description>
    <inlineHelpText>The partner has indicated no preferred pick times.</inlineHelpText>
    <label>No Times Work</label>
    <type>Checkbox</type>
</CustomField>