force-app/main/default/objects/Gear_Order__c/fields/NoTimesWork_Comment__c.field-meta.xml
<CustomField>
    <fullName>NoTimesWork_Comment__c</fullName>
    <label>No Times Work Comment</label>
    <type>TextArea</type>
</CustomField>