force-app/main/default/objects/Gear_Order__c/fields/Num_Children_Served__c.field-meta.xml
<CustomField>
    <fullName>Num_Children_Served__c</fullName>
    <description>The number of children served with this gear order. This number is calculated as the number of demographics entered for this order.</description>
    <inlineHelpText>The number of children served with this gear order. This number is calculated as the number of demographics entered for this order.</inlineHelpText>
    <label># Children Served</label>
    <summaryForeignKey>Gear_Order_Demographic__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>