force-app/main/default/objects/Gear_Order__c/fields/Num_Families_Served__c.field-meta.xml
<CustomField>
    <fullName>Num_Families_Served__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of families served with this gear order. This number is entered by the partner when submitting the order.</description>
    <inlineHelpText>The number of families served with this gear order. This number is entered by the partner when submitting the order.</inlineHelpText>
    <label># Families Served</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>