force-app/main/default/objects/Gear_Order__c/fields/Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gear Orders</relationshipLabel>
    <relationshipName>Gear_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>