force-app/main/default/objects/Gear_Order__c/fields/Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Order_Created__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Order Created</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>