force-app/main/default/objects/Gear_Order__c/fields/Order_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfilled__c</fullName>
    <label>Order Fulfilled</label>
    <type>DateTime</type>
</CustomField>