force-app/main/default/objects/Gear_Order__c/fields/Order_Ready__c.field-meta.xml
<CustomField>
    <fullName>Order_Ready__c</fullName>
    <label>Order Scheduled</label>
    <type>DateTime</type>
</CustomField>