force-app/main/default/objects/Gear_Order__c/fields/Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted__c</fullName>
    <label>Order Submitted</label>
    <type>DateTime</type>
</CustomField>