force-app/main/default/objects/Gear_Order__c/fields/Partner_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partner_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gear Orders</relationshipLabel>
    <relationshipName>Gear_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>