force-app/main/default/objects/Gear_Order__c/fields/Pickup_Choice_1__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Choice_1__c</fullName>
    <label>Preferred Pickup Time 1</label>
    <type>DateTime</type>
</CustomField>