force-app/main/default/objects/Gear_Order__c/fields/Preferred_Pickup_Times__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pickup_Times__c</fullName>
    <description>* only used in the gear order form for the picklist selection values</description>
    <label>Preferred Pickup Times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Pickup_Times</valueSetName>
    </valueSet>
</CustomField>