force-app/main/default/objects/Gear_Order__c/fields/Value_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Items__c</fullName>
    <description>$ value of fulfilled items</description>
    <inlineHelpText>$ value of fulfilled items</inlineHelpText>
    <label>Value of Items</label>
    <summarizedField>Gear_Order_Item__c.Value__c</summarizedField>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>