force-app/main/default/objects/Gear_Order__c/fields/Weight_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_Items__c</fullName>
    <inlineHelpText>Weight of fulfilled items</inlineHelpText>
    <label>Weight of Items (lbs)</label>
    <summarizedField>Gear_Order_Item__c.Weight__c</summarizedField>
    <summaryForeignKey>Gear_Order_Item__c.Gear_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>