force-app/main/default/objects/Gear_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Contact__c</columns>
    <columns>Items_In_Order__c</columns>
    <columns>Num_Children_Served__c</columns>
    <columns>Order_Created__c</columns>
    <columns>Order_Ready__c</columns>
    <columns>Order_Fulfilled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>