force-app/main/default/objects/Gear_Order__c/listViews/Drafts.listView-meta.xml
<ListView>
    <fullName>Drafts</fullName>
    <columns>NAME</columns>
    <columns>Order_Created__c</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Line_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Partner_Organization__c</field>
        <operation>notEqual</operation>
        <value>zz Sample Org</value>
    </filters>
    <label>Drafts</label>
</ListView>